# Games101Assignment

./: .gitignore  CMakeLists.txt
Assignment0/: CMakeLists.txt  main.cpp
Assignment1/: CMakeLists.txt  main.cpp
Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/: CMakeLists.txt  main.cpp
Assignment5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  binary.ppm
Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp
Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Scene.cpp  Triangle.hpp
Assignment8/: CMakeLists.txt
Assignment8/CGL/: CMakeLists.txt
Assignment8/CGL/src/: quaternion.h
Assignment8/src/: CMakeLists.txt  main.cpp  rope.cpp
